logs/auto-python-for-mobile.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Auto_Python_For_Mobile-14.1.5.egg-info'...
Listing './lib/python3.5/site-packages/common'...
Compiling './lib/python3.5/site-packages/common/COM_db_mysql.py'...
***   File "./lib/python3.5/site-packages/common/COM_db_mysql.py", line 44
    print "Error: unable to fecth data"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/common/COM_httpclient.py'...
***   File "./lib/python3.5/site-packages/common/COM_httpclient.py", line 34
    print responseread
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/common/COM_util_tools.py'...
***   File "./lib/python3.5/site-packages/common/COM_util_tools.py", line 16
    print tools.get_timestamp()
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/common/COM_util_trans.py'...
***   File "./lib/python3.5/site-packages/common/COM_util_trans.py", line 49
    print type(simplejson.loads(jsonstr))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/component'...
Compiling './lib/python3.5/site-packages/component/CPT_api_request.py'...
***   File "./lib/python3.5/site-packages/component/CPT_api_request.py", line 141
    print "********"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/component/CPT_driver_cases.py'...
***   File "./lib/python3.5/site-packages/component/CPT_driver_cases.py", line 44
    print "========="
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/init'...
Listing './lib/python3.5/site-packages/lib'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reporter'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.6.5.egg-info'...
Listing './lib/python3.5/site-packages/testCase'...
Compiling './lib/python3.5/site-packages/testCase/htmltestRunner.py'...
***   File "./lib/python3.5/site-packages/testCase/htmltestRunner.py", line 41
    print item["casename"],item["casedataNo"]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testCase/testAutoCreateMethod.py'...
***   File "./lib/python3.5/site-packages/testCase/testAutoCreateMethod.py", line 20
    print testName
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testCase/testDataDriver.py'...
***   File "./lib/python3.5/site-packages/testCase/testDataDriver.py", line 20
    print testName
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testCase/testDataDriverForMobile.py'...
***   File "./lib/python3.5/site-packages/testCase/testDataDriverForMobile.py", line 28
    print "***********"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testCase/testDataProviderMetaclass.py'...
***   File "./lib/python3.5/site-packages/testCase/testDataProviderMetaclass.py", line 18
    print type(meta)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testCase/testParam.py'...
***   File "./lib/python3.5/site-packages/testCase/testParam.py", line 25
    print 'param =', self.param
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/testCase/testunittest_data_provider.py'...
***   File "./lib/python3.5/site-packages/testCase/testunittest_data_provider.py", line 21
    print itemstring
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tools'...
Listing './lib/python3.5/site-packages/util'...
Compiling './lib/python3.5/site-packages/util/escape.py'...
***   File "./lib/python3.5/site-packages/util/escape.py", line 235
    _URL_RE = re.compile(ur"""\b((?:([\w-]+):(/{1,3})|www[.])(?:(?:(?:[^\s&()]|&amp;|&quot;)*(?:[^!"#$%&'()*+,.:;<=>?@\[\]^`{|}~\s]))|(?:\((?:[^\s&()]|&amp;|&quot;)*\)))+)""")
                                                                                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/util/util.py'...
***   File "./lib/python3.5/site-packages/util/util.py", line 90
    raise exc_info[1], None, exc_info[2]
                     ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
